@@ -20,6 +20,26 @@ end_comment
 
 begin_import
 import|import
+name|java
+operator|.
+name|io
+operator|.
+name|IOException
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|List
+import|;
+end_import
+
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -57,20 +77,6 @@ operator|.
 name|document
 operator|.
 name|Field
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|index
-operator|.
-name|LeafReaderContext
 import|;
 end_import
 
@@ -154,6 +160,20 @@ name|lucene
 operator|.
 name|index
 operator|.
+name|LeafReaderContext
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|index
+operator|.
 name|RandomIndexWriter
 import|;
 end_import
@@ -224,7 +244,35 @@ name|lucene
 operator|.
 name|search
 operator|.
+name|FuzzyQuery
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|search
+operator|.
 name|IndexSearcher
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|search
+operator|.
+name|PrefixQuery
 import|;
 end_import
 
@@ -331,22 +379,20 @@ import|;
 end_import
 
 begin_import
-import|import
-name|java
+import|import static
+name|org
 operator|.
-name|io
+name|apache
 operator|.
-name|IOException
-import|;
-end_import
-
-begin_import
-import|import
-name|java
+name|lucene
 operator|.
-name|util
+name|search
 operator|.
-name|List
+name|spans
+operator|.
+name|SpanTestUtil
+operator|.
+name|assertFinished
 import|;
 end_import
 
@@ -364,7 +410,97 @@ name|spans
 operator|.
 name|SpanTestUtil
 operator|.
-name|*
+name|assertNext
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|search
+operator|.
+name|spans
+operator|.
+name|SpanTestUtil
+operator|.
+name|spanNearOrderedQuery
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|search
+operator|.
+name|spans
+operator|.
+name|SpanTestUtil
+operator|.
+name|spanNearUnorderedQuery
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|search
+operator|.
+name|spans
+operator|.
+name|SpanTestUtil
+operator|.
+name|spanNotQuery
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|search
+operator|.
+name|spans
+operator|.
+name|SpanTestUtil
+operator|.
+name|spanOrQuery
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|search
+operator|.
+name|spans
+operator|.
+name|SpanTestUtil
+operator|.
+name|spanTermQuery
 import|;
 end_import
 
@@ -579,6 +715,10 @@ block|,
 literal|"t1 t2 t1 t3 t2 t3"
 block|,
 literal|"s2 s1 s1 xx xx s2 xx s2 xx s1 xx xx xx xx xx s2 xx"
+block|,
+literal|"r1 s11"
+block|,
+literal|"r1 s21"
 block|}
 decl_stmt|;
 DECL|method|checkHits
@@ -2501,6 +2641,155 @@ name|dir
 operator|.
 name|close
 argument_list|()
+expr_stmt|;
+block|}
+DECL|method|testSpanNotWithMultiterm
+specifier|public
+name|void
+name|testSpanNotWithMultiterm
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|SpanQuery
+name|q
+init|=
+name|spanNotQuery
+argument_list|(
+name|spanTermQuery
+argument_list|(
+name|field
+argument_list|,
+literal|"r1"
+argument_list|)
+argument_list|,
+operator|new
+name|SpanMultiTermQueryWrapper
+argument_list|<>
+argument_list|(
+operator|new
+name|PrefixQuery
+argument_list|(
+operator|new
+name|Term
+argument_list|(
+name|field
+argument_list|,
+literal|"s1"
+argument_list|)
+argument_list|)
+argument_list|)
+argument_list|,
+literal|3
+argument_list|,
+literal|3
+argument_list|)
+decl_stmt|;
+name|checkHits
+argument_list|(
+name|q
+argument_list|,
+operator|new
+name|int
+index|[]
+block|{
+literal|14
+block|}
+argument_list|)
+expr_stmt|;
+name|q
+operator|=
+name|spanNotQuery
+argument_list|(
+name|spanTermQuery
+argument_list|(
+name|field
+argument_list|,
+literal|"r1"
+argument_list|)
+argument_list|,
+operator|new
+name|SpanMultiTermQueryWrapper
+argument_list|<>
+argument_list|(
+operator|new
+name|FuzzyQuery
+argument_list|(
+operator|new
+name|Term
+argument_list|(
+name|field
+argument_list|,
+literal|"s12"
+argument_list|)
+argument_list|,
+literal|1
+argument_list|,
+literal|2
+argument_list|)
+argument_list|)
+argument_list|,
+literal|3
+argument_list|,
+literal|3
+argument_list|)
+expr_stmt|;
+name|checkHits
+argument_list|(
+name|q
+argument_list|,
+operator|new
+name|int
+index|[]
+block|{
+literal|14
+block|}
+argument_list|)
+expr_stmt|;
+name|q
+operator|=
+name|spanNotQuery
+argument_list|(
+operator|new
+name|SpanMultiTermQueryWrapper
+argument_list|<>
+argument_list|(
+operator|new
+name|PrefixQuery
+argument_list|(
+operator|new
+name|Term
+argument_list|(
+name|field
+argument_list|,
+literal|"r"
+argument_list|)
+argument_list|)
+argument_list|)
+argument_list|,
+name|spanTermQuery
+argument_list|(
+name|field
+argument_list|,
+literal|"s21"
+argument_list|)
+argument_list|,
+literal|3
+argument_list|,
+literal|3
+argument_list|)
+expr_stmt|;
+name|checkHits
+argument_list|(
+name|q
+argument_list|,
+operator|new
+name|int
+index|[]
+block|{
+literal|13
+block|}
+argument_list|)
 expr_stmt|;
 block|}
 DECL|method|testSpanNots
